# tteso-tes-opentes

./: README.md  pyproject.toml
FUNDAMENTACAO_TEORICA/Exercicios_Programacao_Linear/PYOMO - PROGRAMAÇÃO LINEAR/: Exercícios Pyomo 1.py  Exercícios Pyomo 1_1.py  Exercícios Pyomo 1_2.py  Exercícios Pyomo 1_4.py  Exercícios Pyomo 1_5.py  Exercícios Pyomo 1_6.py
FUNDAMENTACAO_TEORICA/META-Heuristicas/EPSO/: Anotações do Código EPSO do Levi.txt  Comparativo_PSO_EPSO.docx  Relatorio_EPSO_Rastrigin.docx
FUNDAMENTACAO_TEORICA/META-Heuristicas/EPSO/Códigos/: EPSO 2025 Detached from SiMTES.py  EPSO_RASTRINGIN.py  comparacao_nsga2_epso_zdt1.py  comparacao_pso_epso.py  epso_unico.py  pso_unico.py
FUNDAMENTACAO_TEORICA/META-Heuristicas/EPSO/Outros Códigos/: EPSO 2025 Adaptado para Testes.py  EPSO_2025_Rastringin.py  PSO_Rastringin_Teste.py
FUNDAMENTACAO_TEORICA/META-Heuristicas/NSGA-ii/CÓDIGOS/: NSGA-II 2025 Adaptado para Testes.py  NSGA-II 2025 ZDT1.py
FUNDAMENTACAO_TEORICA/META-Heuristicas/PSO/: Exemplo_Teste_PSO.py  Exemplo_Teste_PSO2.py  Função_Rastringin_PySwarms.py  Função_Rastringin_PySwarms_MSE.py  Função_Rastringin_PySwarms_Variando.py  Minimização_PSO.py  PSO_x_NSGAII.py  Resolvendo_Função_Rastringin.py  Resolvendo_Função_Rastringin_Numpy.py  Resolvendo_Função_Rastringin_Pandas_e_Numpy.py
FUNDAMENTACAO_TEORICA/Otimizadores/MOSAIK3_5/: collector.py  controller.py  demo1.py  demo2.py  example_model.py  pyproject.toml  simulator_mosaik.py
FUNDAMENTACAO_TEORICA/Otimizadores/MOSAIK3_5/venv-mosaik/: pyvenv.cfg
(+6 files in other folders)
